[tool.poetry]
name = "revisor"
version = "0.0.1"
description = "A temporary repo to validate neura with alternative implementations"
authors = [
  "edazizovv",
]
license = "MIT"
readme = "README.md"
packages = [{include = "revisor"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"